FlexDeploy 8.0/objects/FileChangeLog__c.object
<CustomObject>
    <fields>
        <fullName>NewFileName__c</fullName>
        <label>NewFileName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldFileName__c</fullName>
        <label>OldFileName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>FileChangeLog</label>
    <nameField>
        <label>FileChangeLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FileChangeLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>